✨ Update .gitignore to include generated Prisma files for better project management

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,24 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+generated/prisma/runtime/wasm-compiler-edge.js
+generated/prisma/client.d.ts
+generated/prisma/client.js
+generated/prisma/default.d.ts
+generated/prisma/default.js
+generated/prisma/edge.d.ts
+generated/prisma/edge.js
+generated/prisma/index-browser.js
+generated/prisma/index.d.ts
+generated/prisma/index.js
+generated/prisma/package.json
+generated/prisma/query_compiler_bg.js
+generated/prisma/query_compiler_bg.wasm
+generated/prisma/query_compiler_bg.wasm-base64.js
+generated/prisma/schema.prisma
+generated/prisma/wasm-edge-light-loader.mjs
+generated/prisma/wasm-worker-loader.mjs
+generated/prisma/runtime/client.d.ts
+generated/prisma/runtime/client.js
+generated/prisma/runtime/index-browser.d.ts
+generated/prisma/runtime/index-browser.js
