Enhance tombola functionality with new features and improvements
- Added more icons to the LotForm for better selection options.
- Improved the emoji selection in ParticipantForm with additional options.
- Implemented delete functionality for participants in ParticipantSelector.
- Added deleteLot function in useTombolaLots for managing lots.
- Enhanced API interactions in useTombolaParticipants for better error handling and participant management.
- Updated AdminTombola to handle admin login and data loading more effectively.
- Created SQL migration scripts for database cleanup and schema reset.
- Adjusted UI elements for better user experience and responsiveness.

--- a/cloudflare/wrangler.toml
+++ b/cloudflare/wrangler.toml
@@ -20,8 +20,8 @@ database_id = "4f519cb2-40f8-433d-9da0-4c250a95b45c"
 # Variables d'environnement (non sensibles)
 # ============================================================
 [vars]
-ENVIRONMENT = "production"
-CORS_ORIGIN = "https://les-ptits-trinquat.pages.dev,http://localhost:8080,http://localhost:8081,http://127.0.0.1:8080,http://127.0.0.1:8081"
+ENVIRONMENT = "development"
+CORS_ORIGIN = "https://les-ptits-trinquat.pages.dev,http://localhost:5173,http://localhost:8080,http://localhost:8081,http://127.0.0.1:5173,http://127.0.0.1:8080,http://127.0.0.1:8081,http://192.168.1.229:8080,http://192.168.1.229:8081,http://192.168.1.229:8787"
 
 # ============================================================
 # Environnement de développement
