--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,16 +12,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          bun-version: latest
+          node-version: '18'
       
       - name: Install dependencies
-        run: bun install
+        run: npm ci
       
       - name: Build
-        run: bun run build
+        run: npm run build
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
