--- a/cloudflare/package.json
+++ b/cloudflare/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy",
+    "deploy": "wrangler deploy --env production",
     "db:create": "wrangler d1 create les-ptits-trinquat-db",
     "db:migrate": "wrangler d1 execute les-ptits-trinquat-db --file=migrations/0001_initial_schema.sql",
     "db:migrate:local": "wrangler d1 execute les-ptits-trinquat-db --local --file=migrations/0001_initial_schema.sql",
