feat(migrations): add multiple migrations for user authentication and tombola schema updates
- Migration 0009: Fix foreign key constraint on participant user_id to allow client-generated UUIDs.
- Migration 0010: Enhance users table with complete constraints and create tombola_participants with correct foreign key.
- Migration 0011: Reset schema for real authentication, transitioning from random UUIDs to authenticated users.
- Migration 0012: Complete fresh schema setup for tombola with authentication, including users, roles, sessions, and audit logs.

feat(auth): implement password hashing and verification utilities

- Add hashPassword and verifyPassword functions for secure password handling.
- Include password strength validation utility.

feat(LoginForm): create a responsive login and registration form

- Implement form handling for user login and registration with validation and error handling.
- Add toggle functionality between login and registration modes.

feat(useCurrentUser): create a hook for managing current user authentication state

- Implement user authentication state management with localStorage.
- Include login, registration, and logout functionalities with error handling.

feat(id-generator): add utility for generating unique IDs

- Implement generateId function to create UUIDs for unique identification.

--- a/cloudflare/package.json
+++ b/cloudflare/package.json
@@ -4,7 +4,7 @@
   "description": "API Cloudflare Workers pour Les P'tits Trinquat",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --env dev",
     "deploy": "wrangler deploy",
     "db:create": "wrangler d1 create les-ptits-trinquat-db",
     "db:migrate": "wrangler d1 execute les-ptits-trinquat-db --file=migrations/0001_initial_schema.sql",
@@ -19,6 +19,6 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.0.0",
     "typescript": "^5.0.0",
-    "wrangler": "^4.61.1"
+    "wrangler": "^4.64.0"
   }
 }
