fix: add D1 database binding to production environment in wrangler.toml
- Add [[env.production.d1_databases]] section
- Fixes 500 errors on all API endpoints due to missing DB binding
- Ensures D1 database is properly configured for production worker

--- a/cloudflare/wrangler.toml
+++ b/cloudflare/wrangler.toml
@@ -27,6 +27,12 @@ database_id = "3f030e96-e28d-4acb-ba13-71c5b1f891b6"
 [env.production]
 vars = { ENVIRONMENT = "production", CORS_ORIGIN = "https://www.lespetitstrinquat.fr", SESSION_DURATION = "604800", RATE_LIMIT_MAX = "60", RATE_LIMIT_WINDOW = "60" }
 
+# D1 Database for production
+[[env.production.d1_databases]]
+binding = "DB"
+database_name = "les-ptits-trinquat-prod"
+database_id = "3f030e96-e28d-4acb-ba13-71c5b1f891b6"
+
 # ============================================================
 # Environnement de développement
 # ============================================================
